--- a/CMake/paraview-config.cmake.in
+++ b/CMake/paraview-config.cmake.in
@@ -7,7 +7,7 @@ The following variables are provided by this module:
 
   * `ParaView_VERSION`: The version of ParaView found.
   * `ParaView_PREFIX_PATH`: Install prefix for ParaView.
-  * `PARAVIEW_BUILD_QT_GUI`: If ParaView's Qt GUI is available.
+  * `PARAVIEW_USE_QT`: If ParaView's Qt GUI is available.
   * `PARAVIEW_USE_MPI`: If ParaView is built with MPI support.
   * `PARAVIEW_USE_PYTHON`: If ParaView is built with Python support.
   * `PARAVIEW_PYTHONPATH`: Where ParaView's Python modules live under the
@@ -15,7 +15,7 @@ The following variables are provided by this module:
   * `PARAVIEW_PLUGIN_SUBDIR`: The subdirectory under the library directory for
     plugins.
   * `ParaView_CLIENT_XML_FILES`: XML files for client applications to use to
-    reproduce ParaView's menu items. Only provided if `PARAVIEW_BUILD_QT_GUI`
+    reproduce ParaView's menu items. Only provided if `PARAVIEW_USE_QT`
     is set.
   * `ParaView_LIBRARIES`: The list of modules specified by `COMPONENTS` and
     `OPTIONAL_COMPONENTS`. This may be used in `MODULES` arguments in the API
@@ -58,7 +58,7 @@ endif ()
 unset(_paraview_find_package_args)
 unset(_paraview_use_external_vtk)
 
-set(PARAVIEW_BUILD_QT_GUI "@PARAVIEW_BUILD_QT_GUI@")
+set(PARAVIEW_USE_QT "@PARAVIEW_USE_QT@")
 set(PARAVIEW_USE_MPI "@PARAVIEW_USE_MPI@")
 set(PARAVIEW_USE_PYTHON "@PARAVIEW_USE_PYTHON@")
 set(PARAVIEW_PLUGIN_SUBDIR "paraview@paraview_version_suffix@/plugins")
@@ -93,7 +93,7 @@ if (@PARAVIEW_USE_PYTHON@) # PARAVIEW_USE_PYTHON
   include("${CMAKE_CURRENT_LIST_DIR}/paraview.modules-vtk-python-module-properties.cmake")
 endif ()
 
-if (@PARAVIEW_BUILD_QT_GUI@) # PARAVIEW_BUILD_QT_GUI
+if (@PARAVIEW_USE_QT@) # PARAVIEW_USE_QT
   include("${CMAKE_CURRENT_LIST_DIR}/${CMAKE_FIND_PACKAGE_NAME}Client-targets.cmake")
   include("${CMAKE_CURRENT_LIST_DIR}/ParaView-client-xml.cmake")
 endif ()
