--- a/Examples/Plugins/ElevationFilter/Plugin/Testing/CMakeLists.txt
+++ b/Examples/Plugins/ElevationFilter/Plugin/Testing/CMakeLists.txt
@@ -1,4 +1,4 @@
-if (PARAVIEW_BUILD_QT_GUI)
+if (PARAVIEW_USE_QT)
   set (TestXML_USES_DIRECT_DATA ON)
   paraview_add_client_tests(
     LOAD_PLUGIN ElevationFilter
