replace `PARAVIEW_USE_RAYTRACING` with `PARAVIEW_ENABLE_RAYTRACING`

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -585,7 +585,7 @@ else()
     TruchasReader.xml)
 endif()
 
-if(PARAVIEW_USE_RAYTRACING)
+if(PARAVIEW_ENABLE_RAYTRACING)
   list(APPEND TESTS_WITH_BASELINES
     OSPRay.xml)
 endif()
