--- a/ParaViewCore/ClientServerCore/Core/CMakeLists.txt
+++ b/ParaViewCore/ClientServerCore/Core/CMakeLists.txt
@@ -109,21 +109,13 @@ if (TARGET VTK::PythonInterpreter)
     vtkPythonSelector)
 endif ()
 
-cmake_dependent_option(PARAVIEW_USE_MPI_SSEND
-  "Use MPI synchronous-send commands for communication" OFF
-  "PARAVIEW_USE_MPI" OFF)
 cmake_dependent_option(PARAVIEW_INITIALIZE_MPI_ON_CLIENT
   "Initialize MPI on client-processes by default. Can be overridden using command line arguments" ON
   "PARAVIEW_USE_MPI" OFF)
 mark_as_advanced(
-  PARAVIEW_INITIALIZE_MPI_ON_CLIENT
-  PARAVIEW_USE_MPI_SSEND)
+  PARAVIEW_INITIALIZE_MPI_ON_CLIENT)
 
 set(vtkProcessModule_defines "BUILD_SHARED_LIBS=${built_shared}")
-if (PARAVIEW_USE_MPI_SSEND)
-  list(APPEND vtkProcessModule_defines
-    PARAVIEW_USE_MPI_SSEND)
-endif ()
 if (PARAVIEW_INITIALIZE_MPI_ON_CLIENT)
   list(APPEND vtkProcessModule_defines
     PARAVIEW_INITIALIZE_MPI_ON_CLIENT)
