remove obsolete `PARAVIEW_ENABLE_CATALYST`.
Catalyst is now always enabled.

--- a/Examples/Catalyst/CMakeLists.txt
+++ b/Examples/Catalyst/CMakeLists.txt
@@ -11,8 +11,7 @@ if (USE_CATALYST)
     message(STATUS
       "${CMAKE_PROJECT_NAME} requires ParaView to be built with Catalyst and "
       "Python support enabled. Please rebuild ParaView (or point to a "
-      "different build of ParaView) with PARAVIEW_ENABLE_CATALYST and "
-      "PARAVIEW_USE_PYTHON set to TRUE")
+      "different build of ParaView) with PARAVIEW_USE_PYTHON set to TRUE")
     return ()
   endif()
 
