Add linear cell extrusion filter

--- a/Clients/ParaView/Testing/XML/CMakeLists.txt
+++ b/Clients/ParaView/Testing/XML/CMakeLists.txt
@@ -754,6 +754,7 @@ list(APPEND TESTS_WITH_BASELINES
   InteractiveViewLinkOnscreen.xml
   InteractiveViewLinkState.xml
   LightWidget.xml
+  LinearCellExtrusion.xml
   LinesAsTubes.xml
   LinkRepresentationProperties.xml
   LoadPartiallyUpdatedStateFiles.xml
