--- a/Remoting/Application/CMakeLists.txt
+++ b/Remoting/Application/CMakeLists.txt
@@ -44,16 +44,168 @@ vtk_module_link(ParaView::RemotingApplication
 vtk_module_client_server_exclude()
 
 set(xml_files
-  Resources/settings.xml
-  Resources/3d_widgets.xml
-  Resources/filters.xml
   Resources/internal_writers.xml
-  Resources/readers.xml
-  Resources/rendering.xml
-  Resources/sources.xml
   Resources/utilities.xml
-  Resources/views_and_representations.xml
   Resources/writers.xml)
+
+if (TARGET VTK::CommonComputationalGeometry)
+  list(APPEND xml_files
+    Resources/proxies_computationalgeometry.xml)
+endif ()
+
+if (TARGET VTK::DomainsChemistry)
+  list(APPEND xml_files
+    Resources/filters_domainschemistry.xml
+    Resources/readers_domainschemistry.xml)
+endif ()
+
+if (TARGET VTK::FiltersAMR)
+  list(APPEND xml_files
+    Resources/filters_filtersamr.xml
+    Resources/sources_filtersamr.xml)
+endif ()
+
+if (TARGET VTK::FiltersCore)
+  list(APPEND xml_files
+    Resources/filters_filterscore.xml
+    Resources/sources_filterscore.xml)
+endif ()
+
+if (TARGET VTK::FiltersExtraction)
+  list(APPEND xml_files
+    Resources/filters_filtersextraction.xml)
+endif ()
+
+if (TARGET VTK::FiltersFlowPaths)
+  list(APPEND xml_files
+    Resources/filters_filtersflowpaths.xml)
+endif ()
+
+if (TARGET VTK::FiltersGeneral)
+  list(APPEND xml_files
+    Resources/filters_filtersgeneral.xml
+    Resources/sources_filtersgeneral.xml)
+endif ()
+
+if (TARGET VTK::FiltersGeneral AND TARGET VTK::FiltersGeometry)
+  list(APPEND xml_files
+    Resources/filters_plotonintersectioncurves.xml)
+endif ()
+
+if (TARGET ParaView::VTKExtensionsFiltersGeneral AND
+    TARGET VTK::FiltersGeneral AND
+    TARGET VTK::FiltersParallel)
+  list(APPEND xml_files
+    Resources/filters_normalglyphs.xml)
+endif()
+
+if (TARGET VTK::FiltersGeneric)
+  list(APPEND xml_files
+    Resources/filters_filtersgeneric.xml)
+endif ()
+
+if (TARGET VTK::FiltersGeometry)
+  list(APPEND xml_files
+    Resources/filters_filtersgeometry.xml)
+endif ()
+
+if (TARGET VTK::FiltersParallel)
+  list(APPEND xml_files
+    Resources/filters_filtersparallel.xml)
+endif ()
+
+if (TARGET VTK::FiltersParallelMPI)
+  list(APPEND xml_files
+    Resources/filters_filtersparallelmpi.xml)
+endif ()
+
+if (TARGET VTK::FiltersHybrid)
+  list(APPEND xml_files
+    Resources/filters_filtershybrid.xml
+    Resources/readers_filtershybrid.xml)
+endif ()
+
+if (TARGET VTK::FiltersHyperTree)
+  list(APPEND xml_files
+    Resources/filters_filtershypertree.xml)
+endif ()
+
+if (TARGET VTK::FiltersModeling)
+  list(APPEND xml_files
+    Resources/filters_filtersmodeling.xml)
+endif ()
+
+if (TARGET VTK::FiltersSources)
+  list(APPEND xml_files
+    Resources/sources_filterssources.xml)
+endif ()
+
+if (TARGET VTK::FiltersStatistics)
+  list(APPEND xml_files
+    Resources/filters_filtersstatistics.xml)
+endif ()
+
+if (TARGET VTK::ImagingCore)
+  list(APPEND xml_files
+    Resources/filters_imagingcore.xml
+    Resources/sources_imagingcore.xml)
+endif ()
+
+if (TARGET VTK::ImagingFourier)
+  list(APPEND xml_files
+    Resources/filters_imagingfourier.xml)
+endif ()
+
+if (TARGET VTK::ImagingGeneral)
+  list(APPEND xml_files
+    Resources/filters_imaginggeneral.xml)
+endif ()
+
+if (TARGET VTK::ImagingHybrid)
+  list(APPEND xml_files
+    Resources/filters_imaginghybrid.xml)
+endif ()
+
+if (TARGET VTK::ImagingSources)
+  list(APPEND xml_files
+    Resources/sources_imagingsources.xml)
+endif ()
+
+if (TARGET VTK::FiltersParallelDIY2)
+  list(APPEND xml_files
+    Resources/filters_filtersparalleldiy2.xml)
+endif ()
+
+if (TARGET VTK::FiltersParallelVerdict)
+  list(APPEND xml_files
+    Resources/filters_filtersparallelverdict.xml)
+endif ()
+
+if (TARGET VTK::FiltersTexture)
+  list(APPEND xml_files
+    Resources/filters_filterstexture.xml)
+endif ()
+
+if (TARGET VTK::FiltersVerdict)
+  list(APPEND xml_files
+    Resources/filters_filtersverdict.xml)
+endif ()
+
+if (TARGET VTK::IOAMR)
+  list(APPEND xml_files
+    Resources/readers_ioamr.xml)
+endif ()
+
+if (TARGET VTK::IOXML AND TARGET VTK::IOParallelXML)
+  list(APPEND xml_files
+    Resources/readers_ioxml.xml
+    Resources/writers_ioxml.xml)
+endif ()
+
+if (TARGET VTK::IONetCDF)
+  list(APPEND xml_files
+    Resources/readers_ionetcdf.xml)
+endif ()
 
 if (TARGET VTK::mpi)
   list(APPEND xml_files
@@ -109,6 +261,69 @@ if (TARGET VTK::IOMotionFX)
     Resources/proxies_motionfx.xml)
 endif ()
 
+if (TARGET VTK::IOLegacy)
+  list(APPEND xml_files
+    Resources/writers_iolegacy.xml)
+endif()
+
+if (TARGET VTK::IOGeometry)
+  list(APPEND xml_files
+    Resources/readers_iogeometry.xml
+    Resources/writers_iogeometry.xml)
+endif()
+
+if (TARGET VTK::IOImage)
+  list(APPEND xml_files
+    Resources/readers_ioimage.xml
+    Resources/writers_ioimage.xml)
+endif()
+
+if (TARGET VTK::IOParallel)
+  list(APPEND xml_files
+    Resources/readers_ioparallel.xml
+    Resources/writers_ensight.xml)
+endif()
+
+if (TARGET VTK::IOParallelLSDyna)
+  list(APPEND xml_files
+    Resources/readers_lsdyna.xml)
+endif()
+
+if (TARGET VTK::IOInfovis)
+  list(APPEND xml_files
+    Resources/readers_ioinfovis.xml)
+endif ()
+
+if (TARGET VTK::IOTecplotTable)
+  list(APPEND xml_files
+    Resources/readers_iotecplottable.xml)
+endif()
+
+if (TARGET VTK::IOVPIC)
+  list(APPEND xml_files
+    Resources/readers_iovpic.xml)
+endif()
+
+if (TARGET VTK::IOTRUCHAS)
+  list(APPEND xml_files
+    Resources/readers_iotruchas.xml)
+endif()
+
+if (TARGET VTK::IOVeraOut)
+  list(APPEND xml_files
+    Resources/readers_ioveraout.xml)
+endif()
+
+if (TARGET VTK::IOH5part)
+  list(APPEND xml_files
+    Resources/readers_ioh5part.xml)
+endif()
+
+if (TARGET VTK::IOPIO)
+  list(APPEND xml_files
+    Resources/readers_iopio.xml)
+endif()
+
 if (TARGET VTK::FiltersOpenTURNS)
   list(APPEND xml_files
     Resources/proxies_openturns.xml)
@@ -132,6 +347,11 @@ if (TARGET VTK::PythonInterpreter)
   list(APPEND xml_files
     Resources/pythonfilter.xml
     Resources/pythonviews.xml)
+endif ()
+
+if (TARGET VTK::RenderingFreeType)
+  list(APPEND xml_files
+    Resources/sources_renderingfreetype.xml)
 endif ()
 
 paraview_add_server_manager_xmls(
