--- a/Remoting/Settings/CMakeLists.txt
+++ b/Remoting/Settings/CMakeLists.txt
@@ -30,5 +30,9 @@
 #==========================================================================
 set(classes
   vtkPVGeneralSettings)
+
 vtk_module_add_module(ParaView::RemotingSettings
   CLASSES ${classes})
+
+paraview_add_server_manager_xmls(
+  XMLS Resources/utilities_settings.xml)
