--- a/VTKExtensions/IOExodus/CMakeLists.txt
+++ b/VTKExtensions/IOExodus/CMakeLists.txt
@@ -34,3 +34,7 @@ set(classes
 
 vtk_module_add_module(ParaView::VTKExtensionsIOExodus
   CLASSES ${classes})
+
+paraview_add_server_manager_xmls(
+  XMLS Resources/readers_ioexodus.xml
+       Resources/writers_ioexodus.xml)
