--- a/VTKExtensions/IOSPCTH/CMakeLists.txt
+++ b/VTKExtensions/IOSPCTH/CMakeLists.txt
@@ -44,3 +44,6 @@ set(private_headers
 vtk_module_add_module(ParaView::VTKExtensionsIOSPCTH
   CLASSES ${classes}
   PRIVATE_HEADERS ${private_headers})
+
+paraview_add_server_manager_xmls(
+  XMLS Resources/readers_pv_iospcth.xml)
