enable basic IO in core
Reworking modules to enable XML and legacy IO in core module. We already
have most classes needed required for core, might as well enabled the
readers/writers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -443,7 +443,9 @@ else ()
     WANT_BY_DEFAULT     OFF
     ENABLE_TESTS        "${vtk_enable_tests}")
 
-  list(REMOVE_ITEM vtk_unrecognized_modules ${vtk_rejected_modules})
+  if (vtk_unrecognized_modules AND vtk_rejected_modules)
+    list(REMOVE_ITEM vtk_unrecognized_modules ${vtk_rejected_modules})
+  endif()
   if (vtk_required_modules OR vtk_unrecognized_modules)
     message(FATAL_ERROR
       "The following modules were requested or required, but not found: "
