--- a/Remoting/ViewsPython/CMakeLists.txt
+++ b/Remoting/ViewsPython/CMakeLists.txt
@@ -5,3 +5,6 @@ set(classes
 
 vtk_module_add_module(ParaView::RemotingViewsPython
   CLASSES ${classes})
+
+paraview_add_server_manager_xmls(
+  XMLS Resources/rendering_remotingpython.xml)
